--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="index.css" />
 	</head>
 	<body class="page">
-		<h3 class="title">Выберите дату и время</h3>
+		<h3 class="title">Выберите дату и время начала бронирования</h3>
 		<input class="calendar" type="text" id="calendar" />
 		<button class="submit">Выбрать</button>
 
